k8s/pgsql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: pgsql
  name: pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgsql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: pgsql
    spec:
      containers:
        - env:
            - name: LANG
              value: en_US.UTF-8
            - name: LC_ALL
              value: en_US.UTF-8
          image: postgres:16
          name: pgsql
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db

---
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  labels:
    io.kompose.service: pgsql
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    io.kompose.service: pgsql
