k8s/traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: ingress-traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure=false
            - --providers.kubernetesingress=true
            - --providers.kubernetesingress.ingressclass=traefik
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --log.level=INFO
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 200m

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-traefik
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 30443
  selector:
    app: traefik
